# pf_hackathon_ocpp_server_2023

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md
src/: evse_state.rs  logstuff.rs  main.rs  metrics.rs  normalize_input.rs  ocpp.rs  ocpp_handlers.rs
tests/: test.rs
tiny_static_http_server/: Dockerfile  Makefile
tiny_static_http_server/.well-known/: .gitignore
