[package]
name = "ocpp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.2"
futures-util = "0.3.27"
tokio = { version = "1.16.1", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.22", default-features = false, features = ["serde", "clock"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
anyhow = "1.0"
rust-ocpp = "0.2.2"

[dev-dependencies]
pretty_assertions = "1.3.0"

[profile.dev]
strip = "debuginfo"

[profile.release]
strip = "debuginfo"
# lto = true
