[package]
name = "ocpp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO go through each transitive dependency in Cargo.lock and make sure it is necessary
# If not, find a way to remove it
[dependencies]
anyhow = "1.0"
async-nats = "0.29.0"
chrono = { version = "0.4.22", default-features = false, features = ["serde", "clock"] }
futures-util = "0.3.27"
rust-ocpp = "0.2.2"
rustls-pemfile = "1.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.16.1", features = ["full"] }
tokio-rustls = "0.23.4"
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
x509-parser = { version = "0.15.0", features = [ "verify" ] }

[dev-dependencies]
pretty_assertions = "1.3.0"

[profile.dev]
strip = "debuginfo"
incremental = true

[profile.release]
strip = "debuginfo"
lto = true
